add engineer details and create functionality.

--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -20,19 +20,16 @@
             <a class="nav-link" href="/">Home </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Course">View All Courses</a>
+            <a class="nav-link" href="/Engineer">View All Engineers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Student">View All Students</a>
+            <a class="nav-link" href="/Machine">View All Machinery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/Course/Create">Add New Course</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/Student/Create">Add New Student</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Department/Create">Add New Department</a>
           </li>
         </ul>
       </div>
