add machine controller

--- a/Factory/Views/Engineer/Details.cshtml
+++ b/Factory/Views/Engineer/Details.cshtml
@@ -22,5 +22,5 @@ else
     }
   </ul>
 }
-<p>@Html.ActionLink("Add a new license to this  engineer", "AddEngineerLicense", new { id = Model.EngineerId})</p>
+<p>@Html.ActionLink("Add a new license to this  engineer", "AddMachine", new { id = Model.EngineerId})</p>
 
