--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
             <a class="nav-link" href="/Machine">View All Machinery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Course/Create">Add New Course</a>
+            <a class="nav-link" href="/Engineer/Create">Add New Engineer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Student/Create">Add New Student</a>
+            <a class="nav-link" href="/Machine/Create">Add New Machine</a>
           </li>
         </ul>
       </div>
