--- a/Factory/Views/Machine/Create.cshtml
+++ b/Factory/Views/Machine/Create.cshtml
@@ -5,7 +5,7 @@
 @model Factory.Models.Machine
 
 <h3>Add a new machine</h3>
-
+<p>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
