--- a/Factory/Views/Machine/Details.cshtml
+++ b/Factory/Views/Machine/Details.cshtml
@@ -23,6 +23,6 @@ else
     }
   </ul>
 }
-<p><a href="#" class="link-secondary">@Html.ActionLink("Add a engineer for this machine", "AddEngineer", new {id = Model.MachineId})</a></p>
+<p><a href="#" class="link-secondary">@Html.ActionLink("Assign an engineer to this machine", "AddEngineer", new {id = Model.MachineId})</a></p>
 <p><a href="#" class="link-secondary">@Html.ActionLink("Edit machine information", "Edit", new {id= Model.MachineId})</a></p>
 <p><a href="#" class="link-secondary">@Html.ActionLink("Delete machine", "Delete", new {id = Model.MachineId})</a></p>
