--- a/Factory/Views/Machine/Details.cshtml
+++ b/Factory/Views/Machine/Details.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {
-  <h3>Engineers:</h3>
+  <h3>This machine is maintained by:</h3>
   <ul>
     @foreach(License license in Model.JoinEntities)
     {
